--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'roboto';
-    src: url('/roboto/Roboto-Regular.ttf');
+    src: url('../roboto/Roboto-Regular.ttf');
     font-weight: normal;
     font-style: normal;
 }
@@ -8,7 +8,7 @@
 html {
     font-family: 'roboto';
     color: white;
-    background-image: url('/images/fond-pelouse.jpg');
+    background-image: url('../images/fond-pelouse.jpg');
 }
 
 .row {
