--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'roboto';
-    src: url('https://github.com/Actarus7/CV/tree/main/roboto/Roboto_Regular.ttf');
+    src: url('C:\Users\8411159P\Documents\Projets\Pros\CV\roboto/Roboto_Regular.ttf');
     font-weight: normal;
     font-style: normal;
 }
@@ -8,7 +8,7 @@
 html {
     font-family: 'roboto';
     color: white;
-    background-image: url('https://github.com/Actarus7/CV/tree/main/images/fond_pelouse.jpg');
+    background-image: url('C:\Users\8411159P\Documents\Projets\Pros\CV\images/fond_pelouse.jpg');
 }
 
 .row {
