--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 html {
     font-family: 'roboto';
     color: white;
-    background-image: url('../images/fond_pelouse.jpg');
+    background-image: url('../CV/images/fond_pelouse.jpg');
 }
 
 .row {
