--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'roboto';
-    src: url('C:/../../roboto/Roboto_Regular.ttf');
+    src: url('../CV/roboto/Roboto_Regular.ttf');
     font-weight: normal;
     font-style: normal;
 }
